--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<div id="app-title-screen">
 				<img src="title.png" id="app-title-logo" />
 				<p>
-					by Eric Woodward<br />&lt;mazelord (at) itsericwoodward.com%gt;
+					by Eric Woodward<br />&lt;mazelord (at) itsericwoodward.com&gt;
 				</p>
 				<div id="app-title-buttons">
 					<button class="instructions-button"><u>I</u>nstructions</button>
