--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				</div>
 			</div>
 			<div id="app-title-screen">
-				<img src="title.png" id="app-title-logo" />
+				<img src="/maze-of-the-minotaur/title.png" id="app-title-logo" />
 				<p>
 					by Eric Woodward<br />&lt;mazelord (at) itsericwoodward.com&gt;
 				</p>
